# glfw-test

./: meson.build
shaders/: meson.build  process.py
source/: main.cpp  main_window.hpp  meson.build
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/source/: glad.c  meson.build
subprojects/libfried/: meson.build
subprojects/libfried/include/fried/: common.hpp  defines.hpp  fried.hpp
subprojects/libfried/include/fried/glfw/: api.hpp  buffer.hpp  color.hpp  common.hpp  error.hpp  gl_object.hpp  glfw.hpp  shader.hpp  shader_program.hpp  vertex.hpp  window.hpp
subprojects/libfried/include/fried/util/: scope_guard.hpp  util.hpp
subprojects/libfried/source/: meson.build
subprojects/libfried/source/glfw/: meson.build  shader.cpp  shader_program.cpp  window.cpp
